--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -11,7 +11,9 @@
     "@mdi/font": "^5.9.55",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "laravel-echo": "^1.11.1",
     "moment": "^2.29.1",
+    "pusher-js": "^7.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.8",
